# ChangeLog for dev-libs/json-glib
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/json-glib/ChangeLog,v 1.22 2011/08/13 16:48:13 armin76 Exp $

  13 Aug 2011; Raúl Porcel <armin76@gentoo.org> json-glib-0.12.4.ebuild:
  alpha/ia64/sparc stable wrt #369909

*json-glib-0.13.4 (24 Jul 2011)

  24 Jul 2011; Gilles Dartiguelongue <eva@gentoo.org> json-glib-0.12.6.ebuild,
  +json-glib-0.13.4.ebuild:
  Add development release for testing purpose.

  14 Jul 2011; Thomas Kahle <tomka@gentoo.org> json-glib-0.12.4.ebuild:
  x86 stable per bug 369909

  01 Jul 2011; Markos Chandras <hwoarang@gentoo.org> json-glib-0.12.4.ebuild:
  Stable on amd64 wrt bug #278255

*json-glib-0.12.6 (16 Jun 2011)

  16 Jun 2011; Nirbheek Chauhan <nirbheek@gentoo.org> -json-glib-0.12.2.ebuild,
  +json-glib-0.12.6.ebuild:
  Bump to 0.12.6, remove old

  14 Apr 2011; Gilles Dartiguelongue <eva@gentoo.org> -json-glib-0.7.6.ebuild,
  -json-glib-0.8.2.ebuild, -json-glib-0.12.0.ebuild, json-glib-0.12.4.ebuild:
  EAPI bump. Raise gobject-introspection dependency per configure. Clean up old
  revisions.

*json-glib-0.12.4 (12 Apr 2011)

  12 Apr 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
  +json-glib-0.12.4.ebuild:
  Bump to 0.12.4, remove coverage support

  26 Feb 2011; Raúl Porcel <armin76@gentoo.org> json-glib-0.10.2.ebuild:
  alpha/ia64 stable wrt #327053

  25 Feb 2011; Michael Weber <xmw@gentoo.org> json-glib-0.10.2.ebuild:
  sparc stable (bug 327053)

  25 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org>
  json-glib-0.10.2.ebuild:
  ppc/ppc64 stable wrt #327053

*json-glib-0.12.2 (11 Jan 2011)

  11 Jan 2011; <nirbheek@gentoo.org> +json-glib-0.12.2.ebuild:
  Bump to 0.12.2, no heavy changes

*json-glib-0.12.0 (05 Dec 2010)

  05 Dec 2010; <nirbheek@gentoo.org> +json-glib-0.12.0.ebuild, metadata.xml:
  Bump to 0.12.0, needed by clutter-1.5.8

  10 Oct 2010; Raúl Porcel <armin76@gentoo.org> json-glib-0.7.6.ebuild,